# w32miller

./: .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  INSTALL  LICENSE  README.md  TODO
batch/: genChangelog.sh  genPatchFromDirs.sh  genShellcode.py  gpgEncryptProject.sh  millerCncOnionHost.sh  millerSectionFromInclude.sh  miller_linker_script.ld  nullDataDirs.py  patchLoader.py  pycrypt_test.py  removeDosStub.py  removeGccVersion.py
batch/old/: bindiff.sh  genShellcode.sh  genhex.sh
cmake/: CMakeBuildDeps.cmake  CMakeMillerBuild.cmake  CMakeMillerFuncs.cmake  CMakeMillerHostTools.cmake  CMakeMillerTests.cmake  CMakeMillerTools.cmake
doc/: apps.dia  work_sample.tex
include/: aes.h  aes_strings.h  compat.h  crypt.h  crypt_strings.h  disasm.h  file.h  http.h  irc.h  loader.h  log.h  math.h  patch.h  pe_infect.h  snprintf.h  utils.h  xor_strings.h
include/distorm/: distorm.h
source/: aes.c  compat.c  crt_x86.asm  crypt.c  crypt_strings.c  decrypter_x86.asm  disasm.c  file.c  http.c  irc.c  loader_x86.asm  main.c  math.c  patch.c  pe_infect.c  snprintf.c  utils.c
source/distorm/: config.h  decoder.c  distorm.c  instructions.c  mnemonics.c  operands.c  prefix.c  textdefs.c  wstring.c
source/tests/: run_tests.c  test_aes.c  test_asm.c  test_compat.c  test_crypt.c  test_http.c  test_mem.c  test_pe.c  test_utils.c  tests.h
source/tools/: decrypter.c  disasm.c  dummy.c  helper.c  helper.h  httpquery.c  ircmsg.c  libtor.c  loader_base.c  loader_decrypt.c  loadmodule.c  pipe_client.c  pipe_server.c  runbin.c
source/tools/dummy_gui/: callbacks.c  winmain.c
source/tools/host/: CMakeLists.txt  hdr_crypt.c  pycrypt.c  pyloader.c
source/tools/host/go/cnclib/: miller_consts.go  miller_victim.go
source/tools/host/go/cncmaster/: Makefile  http.go  main.go
source/tools/host/go/cncproxy/: Makefile  http.go  main.go  manager.go
source/tools/host/old/: file_crypt.c  pyhttp.c
source/tools/old/: codecave.c  loadlib.c  shellcode.c
